fix(Market): add `max-height` and `overflow-y` to trade modal

--- a/src/pages/Market/Market.module.scss
+++ b/src/pages/Market/Market.module.scss
@@ -156,9 +156,13 @@
 
 .sidebar {
   &Dialog {
-    border-radius: 20px 20px 0px 0px;
-    background-color: var(--color-surface-primary);
     position: absolute;
+
+    max-height: 100vh;
+    overflow-y: auto;
+
+    background-color: var(--color-surface-primary);
+    border-radius: 20px 20px 0px 0px;
 
     &Header {
       display: flex;
